=== v0.1.79 ===
- Upgrade BTC RPC Explorer to v1.1.8
- Fix issue hidden sidebar on RTL

=== v0.1.78 ===
- Fix issue displaying main page

=== v0.1.77 ===
- Upgrade Whirlpool CLI to v0.10.2
- Upgrade RTL to v0.6.0
- Improve settings page layout and info

=== v0.1.76 ===
- Upgrade Whirlpool CLI to v0.10.1
- Fix issue with building docker images
- Add logout button
- Add default password hint

=== v0.1.75 ===
- Basic Whirlpool support
- Add Mempool.Space mempool viewer
- BTC RPC Explorer v1.1.5
- Improve tor status reporting
- Automatically check drive on each boot

=== v0.1.74 ===
- Add option to restore channel backup when creating Lightning wallet
- Ugrade LND to 0.8.2
- Improved rockpro64 support
- Improve public IP detection
- Improve drive health monitoring
- Fix VM Serial number calculation
- Bug fixes

=== v0.1.73 ===
- Add button to regenerate lnd tls certificate
- BTC RPC Explorer starts once electrs is ready
- JoinMarket updated to v0.6.1
- Improve RAM usage for Bitcoin 0.19.0

=== v0.1.72 ===
- Revert lndmanage upgrade (not available via pip)

=== v0.1.71 ===
- Improve upgrades
- Improve networking
- Faster NPM installs
- More RockPro64 support
- Improve device detections
- Upgrade lndconnect to v0.2.0
- Upgrade lndmanage to v0.8.1
- Upgrade btc-rpc-explorer to v1.1.4
- Update JoinMarket to v0.6.0
- Upgrade RTL to v0.5.4
- Performance improvements
- General bug fixes

=== v0.1.70 ===
- Update LND to v0.8.1
- Update Bitcoin to v0.19.0.1
- Improve Upgrades

=== v0.1.69 ===
- Add GUI to HDMI output
- Add WebSSH for easier SSH access
- Improve Upgrades

=== v0.1.68 ===
- Install JoinMarket
- Fix issues with Docker installation
- Improve LND + BTC config for privacy
- Another Tor fix

=== v0.1.67 ===
- Improve upgrade consistency
- Improve resource usage of netdata
- Add ability to disable netdata
- Fix tor connection issue
- Remove duplicate BTC Explorer
- Handle 404 and 500 errors
- Dark mode fixes

=== v0.1.66 ===
- Add netdata as first docker container